Fix right aligned table headings
The CSS for these wasn’t being set on the correct class.

--- a/app/assets/stylesheets/components/table.scss
+++ b/app/assets/stylesheets/components/table.scss
@@ -135,6 +135,10 @@
     width: 52.5%;
   }
 
+}
+
+.table-field-heading {
+
   &:last-child {
     padding-right: 0;
   }
